--- a/frontend_vite/index.html
+++ b/frontend_vite/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meetly.AI - An AI Meeting Intelligence Platform</title>
+
+    <!-- ✅ Custom Favicon -->
+    <link rel="icon" type="image/png" href="/meetly-logo.png" />
+    <link rel="apple-touch-icon" href="/meetly-logo.png" />
+    <meta name="theme-color" content="#4F46E5" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
