--- a/frontend_vite/index.html
+++ b/frontend_vite/index.html
@@ -6,7 +6,7 @@
     <title>Meetly.AI - An AI Meeting Intelligence Platform</title>
 
     <!-- ✅ Custom Favicon -->
-    <link rel="icon" type="image/png" href="/meetly-logo.png" />
+    <link rel="icon" type="image/png" href="/meetly_ai_logo.png" />
     <link rel="apple-touch-icon" href="/meetly-logo.png" />
     <meta name="theme-color" content="#4F46E5" />
   </head>
