--- a/frontend_vite/index.html
+++ b/frontend_vite/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meetly.AI - An AI Meeting Intelligence Platform</title>
 
-    <!-- ✅ Custom Favicon -->
-    <link rel="icon" type="image/png" href="/meetly_ai_logo.png" />
-    <link rel="apple-touch-icon" href="/meetly-logo.png" />
+    <!-- ✅ Meetly.AI Professional Favicon Setup -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-96x96.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="manifest" href="/site.webmanifest">
     <meta name="theme-color" content="#4F46E5" />
   </head>
 
